--- a/src/components/SubscribeButton/styles.module.scss
+++ b/src/components/SubscribeButton/styles.module.scss
@@ -3,7 +3,7 @@
    height: 4rem;
    border: 0;
    border-radius: 2rem;
-   background: var(--yelow-500);
+   background: var(--yellow-500);
    color: var(--gray-900);
    font-size: 1.25rem;
    font-weight: bold;
