Ignews :sparkles:  Finalized

--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -47,7 +47,7 @@
             position: absolute;
             bottom: 1px;
             left: 0;
-            background: var(--yelow-500);
+            background: var(--yellow-500);
          }
       }
    }
